<resources>
    <string name="app_name">Talk Hub</string>
    <string name="talkhub">TalkHub</string>
    <string name="hello_welcome">Hello , Welcome !</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_talkhub_secure_chat_platform">Welcome to TalkHub secure chat platform</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_via_social_media">Or via social media</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="create_account_now">Create Account Now!</string>
    <string name="please_wait">Please wait...</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="activeuser">activeuser</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="app">App</string>
    <string name="about_talkhub">About TalkHub</string>
    <string name="logout">Logout</string>
    <string name="image">Image</string>
    <string name="recents">Recents</string>
    <string name="currently_active">Currently Active</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="imageprofile">imageprofile</string>
    <string name="my_profile">My Profile</string>
    <string name="requests">Requests</string>
    <string name="user_name">User Name</string>
    <string name="darkmode">darkmode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="profile_lock">Profile Lock</string>
    <string name="talk_hub">Talk Hub</string>
    <string name="notification">Notification</string>
    <string name="privacy">Privacy</string>
    <string name="loading">Loading...</string>
</resources>