<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F2A4A">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginTop="20dp">

        <!-- App Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talkhub"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"/>

        <!-- Welcome Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continue"
            android:textColor="#38BDF8"
            android:layout_marginBottom="30dp"/>

        <!-- Username -->
        <TextView
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:autofillHints="email"
            android:background="@drawable/rounded_edittext"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            tools:ignore="LabelFor" />

        <!-- Password -->
        <TextView
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:padding="15dp"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"
            tools:ignore="LabelFor" />

        <!-- Remember & Forget -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbRemember"
                android:text="@string/remember_me"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvForgot"
                android:text="@string/forget_password"
                android:textColor="#38BDF8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="#000000"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="25dp"/>

        <!-- Bottom Sign Up -->
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="#FFFFFF"
            android:layout_marginTop="30dp"
            android:layout_marginStart="75dp"
            android:gravity="center"/>

    </LinearLayout>

</ScrollView>
