<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/light_bg">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/talk_hub"
                android:textSize="24sp"
                android:padding="5dp"
                android:textColor="#12309E"
                android:layout_marginStart="10dp"
                android:textStyle="bold"/>


        </LinearLayout>

        <!-- Card 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:background="@color/card_bg">

            <!-- Dark Mode -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/darkmode"
                    android:src="@drawable/ic_dark_mode"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dark_mode"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <Switch
                    android:id="@+id/switchDarkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <!-- Profile Lock -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"

                android:background="@color/card_bg"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/darkmode"
                    android:src="@drawable/profile_lock"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_lock"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- Chat Customize -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/darkmode"
                    android:src="@drawable/custom_chat"/>

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Chat Customize"
                    android:textStyle="bold"
                android:textSize="16sp"/>

            </LinearLayout>

            <!-- Notification -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/darkmode"
                    android:src="@drawable/notifications"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/notification"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

            </LinearLayout>




            <!-- Privacy -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/darkmode"
                    android:src="@drawable/privacy"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/privacy"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

        <!-- Space -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <!-- Card 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="12dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/darkmode"
                android:src="@drawable/logout"/>

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/logout"
                android:textStyle="bold"
                android:textSize="16sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/magic_wand"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Created by Stranger"
                android:textColor="@color/black"/>

        </LinearLayout>



    </LinearLayout>
</ScrollView>
